Fix layout issues around Container

--- a/src/components/Container/styles.module.scss
+++ b/src/components/Container/styles.module.scss
@@ -4,7 +4,11 @@
   padding-bottom: 60px;
 
   @include media-breakpoint-down(lg) {
-    padding: 15px 12px;
+    padding-bottom: 24px;
+  }
+
+  @include media-breakpoint-down(md) {
+    padding-bottom: 12px;
   }
 }
 
