--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -2,7 +2,6 @@
 
 .footer {
   padding: 8px 0;
-  margin: 15px 0 0;
   color: var(--footer-color);
   text-align: center;
   background-color: var(--footer-background);
@@ -11,10 +10,6 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-  }
-
-  @include media-breakpoint-down(lg) {
-    margin-top: 0;
   }
 }
 
